# rust-boxing

./: Cargo.toml  README.md  dqn0.mpk  dqn1.mpk
assets/archived_models/: dqn001.mpk  dqn003.mpk  dqn004.mpk  dqn006.mpk  dqn008.mpk  dqn010.mpk  dqn013.mpk  dqn014.mpk  dqn016.mpk  dqn018.mpk  dqn023.mpk  dqn024.mpk  dqn029.mpk  dqn030.mpk  dqn031.mpk  dqn033.mpk  dqn034.mpk  dqn035.mpk  dqn037.mpk  dqn038.mpk  dqn039.mpk  dqn041.mpk  dqn046.mpk  dqn048.mpk  dqn049.mpk  dqn050.mpk  dqn052.mpk  dqn053.mpk  dqn059.mpk  dqn060.mpk  dqn061.mpk  dqn063.mpk  dqn064.mpk  dqn065.mpk  dqn067.mpk  dqn068.mpk
assets/models/: dqn0.mpk  dqn000.mpk  dqn002.mpk  dqn005.mpk  dqn007.mpk  dqn009.mpk  dqn011.mpk  dqn012.mpk  dqn015.mpk  dqn017.mpk  dqn019.mpk  dqn020.mpk  dqn021.mpk  dqn022.mpk  dqn025.mpk  dqn026.mpk  dqn027.mpk  dqn028.mpk  dqn032.mpk  dqn036.mpk  dqn040.mpk  dqn042.mpk  dqn043.mpk  dqn044.mpk  dqn045.mpk  dqn047.mpk  dqn051.mpk  dqn054.mpk  dqn055.mpk  dqn056.mpk  dqn057.mpk  dqn058.mpk  dqn062.mpk  dqn066.mpk  dqn069.mpk  dqn070.mpk  dqn071.mpk  dqn072.mpk  dqn073.mpk  dqn074.mpk  (+4 more)
assets/training_configs/: dqn009.json  dqn010.json  dqn011.json  dqn013.json  dqn016.json  dqn020.json  dqn022.json  dqn023.json  dqn026.json  dqn028.json  dqn029.json  dqn032.json  dqn033.json  dqn035.json  dqn037.json  dqn039.json  dqn046.json  dqn048.json  dqn051.json  dqn053.json  dqn057.json  dqn059.json  dqn061.json  dqn062.json  dqn065.json  dqn067.json  dqn069.json  dqn071.json
core/: Cargo.toml
core/src/: control.rs  lib.rs  utils.rs
examples/: game_model_v_model.rs  game_window.rs
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.dev.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: FighterCard.tsx  FighterIndicator.tsx  Home.tsx  Landing.tsx  Layout.tsx  (+2 more)
src/: lib.rs  main.rs  model.rs  replay_buffer.rs  train.rs
src/game/: control.rs  mod.rs
train/: Cargo.toml
train/examples/: evaluate_all.rs  evaluate_swiss.rs  game_model_v_model.rs  game_window.rs  save_models.rs
train/src/: lib.rs  main.rs  replay_buffer.rs  train.rs
web/: Cargo.toml
web/.cargo/: config.toml
web/pkg/: web.d.ts  web_bg.js  web_bg.wasm  web_bg.wasm.d.ts
web/src/: lib.rs  state.rs
(+18 files in other folders)
