[package]
name = "core"
version = "0.1.0"
edition = "2024"

[features]
default = ["native"]
native = ["burn/default", "burn/std", "burn/tui", "burn/train", "burn/wgpu"]
wasm = ["getrandom/wasm_js", "wasm-bindgen", "tsify"]

[dependencies]
parry2d = {version = "0.24.0", features=["serde-serialize"]}
burn = {version = "0.18.0", default-features=false}
getrandom = { version = "0.3.3", features = ["wasm_js"], optional = true }
rand = "0.9.2"
tsify = {version = "0.5.5", optional = true}
wasm-bindgen = { version = "0.2.103" , optional = true }
serde = {version = "1.0.226"}
