[package]
name = "web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core = { path = "../core", features=["wasm"], default-features = false }
burn = {version = "0.18.0", features = ["ndarray" ]}
parry2d = "0.24.0"
rand = "0.9.2"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["console"] }
